მე-5 დავალება შეცვლილი
დავამატე მეტი კონტენტი და გადავხედე rowspan და dataspanს თუმცა შესაბამისი გამოყენება ვერ მოვუძებნე ამ სიტუაციაში

--- a/homework5/index.html
+++ b/homework5/index.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./style/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
 </head>
 <body>
-   <center> <h1>WELOME TO MY WEBSITE</h1></center>
+   <center> <h1>Front-end Web Tools</h1></center>
     <div class="main">
         <div id="main1">
             <img src="./imgs/1.png" alt="htmlimg">
@@ -15,33 +18,46 @@
             <img src="./imgs/3.jpg" alt="js img">
         </div>
     </div>
+<main>
+    <div id="html">
+        <table>
+            <tr>
+                <td>
+                    <img src="./imgs/1.png" alt="html img">
+                </td>
+                <td> 
+                    <p>The HyperText Markup Language or HTML is the standard markup language for documents designed to be displayed in a web browser. It defines the content and structure of web content. It is often assisted by technologies such as Cascading Style Sheets and scripting languages such as JavaScript.</p>
+                </td>   
+            </tr>
+        </table>
 
-<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique architecto repellat quibusdam dolor sequi, assumenda odit cupiditate nostrum earum hic quis ducimus et unde repudiandae eligendi facere non voluptatum tenetur? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab maiores eius non, perferendis quos omnis animi facere debitis pariatur voluptatum tempora excepturi quam similique aut doloremque vel error, cupiditate nulla.</p>
+    </div>
+    <div id="css">
+        <table>
+            <tr>
+                <td> 
+                    <p>Cascading Style Sheets is a style sheet language used for specifying the presentation and styling of a document written in a markup language such as HTML or XML. CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.</p>
+                </td>   
+                <td>
+                    <img src="./imgs/2.png" alt="css img">
+                </td>
+            </tr>
+        </table>
+    </div>
+    <div id="js">
+        <table>
+            <tr>
+                <td>
+                    <img src="./imgs/3.jpg" alt="js img">
+                </td>
+                <td> 
+                    <p>JavaScript, often abbreviated as JS, is a programming language and core technology of the World Wide Web, alongside HTML and CSS. As of 2024, 98.9% of websites use JavaScript on the client side for webpage behavior, often incorporating third-party libraries</p>
+                </td>   
+            </tr>
+        </table>
+    </div>
+</main>
 
-    <table>
-    <tr>
-        <th>x</th>
-        <th>x</th>
-        <th>x</th>
-    </tr>
-    <tr>
-        <td>123</td>
-        <td>456</td>
-        <td>678</td>
-    </tr>
-    <tr>
-        <td>123</td>
-        <td>456</td>
-        <td>678</td>
-    </tr>
-    <tr>
-        <td>123</td>
-        <td>456</td>
-        <td>678</td>
-    </tr>
-</table>
-
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis architecto quis error ullam, voluptates rerum! Exercitationem accusamus amet aut, ullam cum earum corrupti, voluptas voluptates vero fuga quae modi dolore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ipsam, dignissimos magnam nobis sapiente beatae suscipit at consectetur odit, ipsa ducimus nemo tempore ratione error omnis quibusdam earum quod quos!</p>
 <br>
 <h3>do you like my website?</h3>
 <input type="text">
